--- a/menzies.html
+++ b/menzies.html
@@ -43,6 +43,45 @@
                 <p class="liText2">text</p>
             </li>
         </ol>
+        <section>
+            <img src="./assets/GOTnight.png" alt="GOTnight" class="mImage">
+        </section>
+        <section>
+            <ol class="menziesOl">
+                <li>
+                    <p class="liText1">Lastare ARN 2007-2008</p>
+                    <p class="liText2">Började jobba som lastare på Arlanda där det ingick uppgifter som lasta bagage, frakt och post, köra lite diverse fordon. Företaget hette vid det här laget NOVIA innan det blev uppköpt av Menzies Aviation i samband med min flytt till Göteborg</p>
+                </li>
+                <li>
+                    <p class="liText1">Lastare GOT 2008-2012</p>
+                    <p class="liText2">Efter en flytt till Göteborg började jag jobba på Landvetter flygplats där jag fortsatte med samma tjänst som jag hade på Arlanda <br> Och här började jag snabbt utöka mina kompetenser inom företaget med att lära mig utföra svårare arbetsuppgifter som till exempel pushback startledare etc. <br> Hade här också ett längre uppehåll mellan Oktober 2010 till Februari 2012 då jag gjorde en längre backpacking resa ner till Australien och Sydostasien. Men blev återanställd direkt vid min hemkomst.</p>
+                </li>
+                <li>
+                    <p class="liText1">Passagerar Assistent GOT 2009-2010</p>
+                    <p class="liText2">Efter en förlust av en kund för företaget så gjordes nedskärningar på rampen. I samband med det så anställdes jag som Passagerar Assistent, <br> där uppgifter som incheckning av passagerare, boarding och andra kontroller som passuppgifter, biljettrestriktioner etc ingick. <br> Efter en sommar på detta jobb gick jag tillbaks till rampen men var kvar som timmanställd fram till min utlandsresa 2010.</p>
+                </li>
+                <li>
+                    <p class="liText1">SAL 2012-2014</p>
+                    <p class="liText2">Bara ett par månader efter min hemkomst så blev jag erbjuden en ny tjänst som Supervising Agent Loading (SAL) även känd som Loadmaster, Crew Chief och lite andra titlar. <br>Här var jag gruppledare där jag hade ansvaret "under vingarna" för en turnaround. <br>Tjänsten innebär att man har ansvaret för ett lag av lastare (mellan 2 och 10 beroende på flight) samt ansvar över att lastning genomförs enligt satta instruktioner och skriver under dokument som intygar detta. </p>
+                </li>
+                <li>
+                    <p class="liText1">Operations Officer 2014-2017</p>
+                    <p class="liText2">Började jobba på vårt Operations eller även känt som Trafikkontor. <br> En avdelning som fungerar som spindeln i nätet där all information strömmar in och sprids ut till diverse avdelningar. <br> Väldigt varierande arbetsuppgifter där det ingick bland annat all daglig kontakt med flygbolagen, <br> koordinering av turnarounder, vikt och balansberäkning, försenings förklaring etc. <br> Under min tid på Trafikkontoret så utvecklades arbetsplatsen enormt med flertalet nya kunder nya tjänster och arbetssätt. <br> Då vi hade gått från ca 10 fasta tjänster till närmare 30. <br> Vart här även en sort informell IT ansvarig.</p>
+                </li>
+                <li>
+                    <p class="liText1">DM Operations 2017-2021</p>
+                    <p class="liText2">Efter en längre tid utan direkt arbetsledning direkt för Operations, där arbetsledarrollen varit ”lånad” från Rampen där det inte fanns någon större insikt i arbetet på avdelningen, <br> så infördes en ny Duty Manager roll specifikt för Operations. <br> Jag blev en av dom 5 första till denna tjänst där vi var med och utvecklade tjänsten från grunden. <br> Här ingick arbetsuppgifter så som korttids planering, medarbetarsamtal, interna kontroller på arbetet, täckning av personalbortfall etc.</p>
+                </li>
+                <li>
+                    <p class="liText1">Trainer Operations 2018-</p>
+                    <p class="liText2">Gick en såkallad Train the Trainer utbildning för att få hålla interna utbildningar. <br> Där jag haft ansvar för att utbilda ny personal som ska in på Operations. <br> Har hållit dom flesta utbildningar men har haft som specialområde system. <br> Där jag lärt ut olika vikt&balanssystem som används för det dagliga arbetet.</p>
+                </li>
+                <li>
+                    <p class="liText1">DM Airside 2021-</p>
+                    <p class="liText2">Som en följd av pandemin så slogs avdelningarna Ramp och Operations ihop till en Airside. <br> Vart här som ensam tidigare DM utvald som en av dom första 4 ordinarie Duty Managers <br> där dom övriga 3 kom från tidigare administrativa tjänster som lagts ner på grund ut av pandemin. <br> Även här har man varit en stor del av att utforma denna nya tjänst.</p>
+                </li>
+            </ol>
+        </section>
 
     </main>
 </body>
