--- a/menzies.html
+++ b/menzies.html
@@ -17,7 +17,7 @@
             <ol class="menziesOl">
                 <li>
                     <p class="liText1">Lastare ARN 2007-2008</p>
-                    <p class="liText2">Började jobba som lastare på Arlanda där det ingick uppgifter som lasta bagage, frakt och post, köra lite diverse fordon. Företaget hette vid det här laget NOVIA innan det blev uppköpt av Menzies Aviation i samband med min flytt till Göteborg</p>
+                    <p class="liText2">Började jobba som lastare på Arlanda där det ingick uppgifter som lasta bagage, frakt och post, köra lite diverse fordon. <br> Företaget hette vid det här laget NOVIA innan det blev uppköpt av Menzies Aviation i samband med min flytt till Göteborg</p>
                 </li>
                 <li>
                     <p class="liText1">Lastare GOT 2008-2012</p>
