--- a/menzies.html
+++ b/menzies.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Feffe - Menzies</title>
+    <title>CV Feffe - Menzies</title>    
+    <script src="https://kit.fontawesome.com/7a727e3fe8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -50,5 +52,16 @@
             </ol>
         </section>
     </main>
+    <footer>
+        <div id="footer">
+            <div>
+                <h1><a href="./index.html" class="fas fa-home"></a></h1>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/daniel-hammarling-564505101/" class="fab fa-linkedin"></a>
+                <a href="https://www.instagram.com/fefferonie/" class="fab fa-instagram"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
