--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+    <header class="mainHeader">
         <h1 class="headerText">Daniel "Feffe" Hammarling</h1>
         <nav class="navigering">
             <ul class="headNav">
